--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -152,6 +152,17 @@ footer {
 // ===============================
 
 .controls {
+	// --control-mask-width: 4vw;
+	// --control-mask: linear-gradient(
+	// 	to top,
+	// 	red,
+	// 	red 0,
+	// 	black calc(var(--control-mask-width) * 2),
+	// 	black calc(100% - calc(var(--control-mask-width) * 2)),
+	// 	red 100%,
+	// 	red
+	// );
+
 	font-size: var(--text-base);
 	display: grid;
 	grid-column: -1 / 1;
@@ -161,15 +172,31 @@ footer {
 	gap: var(--space-base);
 	position: fixed;
 	background-color: var(--theme-color-body-bg);
-	margin-bottom: var(--space-base);
-	padding: var(--space-base) clamp(var(--space-base), 4vw, var(--space-lg));
+	// margin-bottom: var(--space-base);
+	padding: var(--space-base) clamp(var(--space-base), 4vw, var(--space-lg)) var(--space-lg);
 	width: 100%;
+	// box-shadow: 0px 1px 3px var(--color-black-70);
 	z-index: 1;
+
+	// -webkit-mask-image: var(--control-mask);
+	// mask-image: var(--control-mask);
+	// overflow: hidden;
+	// background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+	/* adjust the colors and transparency values as needed */
+	// background: linear-gradient(to bottom, red 0%, red 80%, transparent 80%, transparent 100%);
+
+	// -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
+	// mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) 50%);
+
+	// background: rgb(0, 0, 0);
+	// background: linear-gradient(0deg, transparent, var(--theme-color-body-bg) 11%);
+
+	background: linear-gradient(0deg, transparent, var(--theme-color-body-bg) 25%);
 
 	@media screen and (min-width: 500px) {
 		font-size: var(--text-md);
 		justify-content: center;
-		padding-bottom: var(--space-lg);
+		padding-bottom: var(--space-2xl);
 		padding-top: var(--space-lg);
 	}
 
@@ -178,7 +205,6 @@ footer {
 		justify-content: start;
 		background-color: initial;
 		padding: 0;
-		margin-bottom: 0;
 		margin-top: var(--space-lg);
 	}
 }
