minor transparent sticky

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -203,7 +203,7 @@ footer {
 	@media screen and (min-width: 1024px) {
 		position: initial;
 		justify-content: start;
-		background-color: initial;
+		background: transparent;
 		padding: 0;
 		margin-top: var(--space-lg);
 	}
