--- a/src/components/CardCarousel/CardCarousel.scss
+++ b/src/components/CardCarousel/CardCarousel.scss
@@ -204,6 +204,7 @@
 
 .progressContainer {
 	--progress-height: var(--app-bar-height);
+	// --progress-height: var(--app-bar-height);
 
 	z-index: 1;
 	background-color: var(--progress-bar-back);
