--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -138,8 +138,10 @@
 	margin: var(--space-xl) 0 var(--space-2xl);
 
 	@media screen and (min-width: 1024px) {
-		margin-top: var(--space-3xl);
-		margin-bottom: var(--space-3xl);
+		// margin-top: var(--space-3xl);
+		// margin-bottom: var(--space-3xl);
+		margin-bottom: 0;
+		margin-top: calc(var(--app-header-height) / -1);
 	}
 }
 
