--- a/src/components/CardCarousel/CardCarousel.scss
+++ b/src/components/CardCarousel/CardCarousel.scss
@@ -63,8 +63,6 @@
 	@media screen and (min-width: 500px) {
 		-webkit-mask-image: var(--mask);
 		mask-image: var(--mask);
-		// margin-left: calc(var(--mask-width) / -1);
-		// margin-right: calc(var(--mask-width) / -1);
 		overflow: hidden;
 	}
 }
@@ -86,37 +84,13 @@
 
 		height: 100%;
 		width: clamp(300px, var(--card-vw), 470px);
-
-		margin-left: auto;
-		margin-right: auto;
+		margin-inline: auto;
 
 		@media screen and (min-width: 1024px) {
 			--card-vw: 33vw;
 		}
 	}
 }
-
-// .buttonContainer {
-// 	display: grid;
-// 	grid-template-columns: auto auto;
-// 	place-content: center;
-// 	gap: var(--space-md);
-// 	overflow: hidden;
-
-// 	@media screen and (min-width: 500px) {
-// 		position: absolute;
-// 		top: 50%;
-// 		left: 0;
-// 		right: 0;
-// 		transform: translateY(-50%);
-// 		width: 100%;
-// 		justify-content: space-between;
-// 		margin-left: auto;
-// 		margin-right: auto;
-// 		padding: 0 clamp(var(--space-base), 4vw, var(--space-lg));
-// 		width: min(650px, 100%);
-// 	}
-// }
 
 .carouselButton {
 	grid-area: container;
@@ -204,7 +178,6 @@
 
 .progressContainer {
 	--progress-height: var(--app-bar-height);
-	// --progress-height: var(--app-bar-height);
 
 	z-index: 1;
 	background-color: var(--progress-bar-back);
@@ -213,12 +186,10 @@
 	right: 0;
 	left: 0;
 	height: var(--progress-height);
-	margin-left: auto;
-	margin-right: auto;
+	margin-inline: auto;
 	pointer-events: none;
 	width: 100%;
 	overflow: hidden;
-	// box-shadow: 0px 1px 3px var(--color-black-70);
 }
 
 .progressBar {
