--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -19,7 +19,7 @@ html {
 body {
 	width: 100%;
 	height: 100%;
-	background-color: var(--theme-color-body-bg, var(--color-gray-light));
+	background-color: var(--theme-color-body-bg, var(--color-gray-100));
 	padding: 0;
 	margin: 0;
 	font-family: var(--font-family);
