--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -69,23 +69,14 @@
 
 	// CELL ANIMATION EXPERIMENT BELOW
 	// .is-snapped & {
-	// 	// @for $i from 1 through 100 {
-	// 	// 	.cell:nth-child(#{$i}) {
-	// 	// 		opacity: 1;
+	// 	@for $i from 1 through 100 {
+	// 		.cell:nth-child(#{$i}) {
+	// 			opacity: 1;
 
-	// 	// 		@media (prefers-reduced-motion: no-preference) {
-	// 	// 			transform: translateY(0);
-	// 	// 			transition-delay: calc(var(--duration-md) + ($i * 12ms));
-	// 	// 		}
-	// 	// 	}
-	// 	// }
-	// 	.integerGrid {
-	// 		opacity: 1;
-	// 		// border: 1px solid red;
-
-	// 		@media (prefers-reduced-motion: no-preference) {
-	// 			transform: translateX(0);
-	// 			// transition-delay: var(--duration-md);
+	// 			@media (prefers-reduced-motion: no-preference) {
+	// 				transform: translateY(0);
+	// 				transition-delay: calc(var(--duration-md) + ($i * 12ms));
+	// 			}
 	// 		}
 	// 	}
 	// }
@@ -140,15 +131,6 @@
 	gap: 6px;
 	width: 100%;
 	height: 100%;
-	//Todo: this opacity transition is terrible on ios and safari. Making it full opacity all the time will be better on these browsers. But you lose some nice polish. Is there a better way?
-	// opacity: 0;
-	opacity: 1;
-	// transition: opacity var(--duration-md) ease-out var(--duration-xs);
-	// transition-delay: var(--duration-xs);
-
-	// .is-snapped & {
-	// 	opacity: 1;
-	// }
 }
 
 .cell {
