--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,8 +1,8 @@
+@use './colors';
+@use './variables';
 // @import url("https://fonts.googleapis.com/css2?family=Lexend&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Lexend&family=Nunito:wght@600&display=swap');
 
-@import './colors';
-@import './variables';
 
 * {
 	margin: 0;
