reorderd css to avoid dart warning, refactored has-hover mixin to use each

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -3,7 +3,7 @@
 		&#{$selector} {
 			@content;
 		}
-		@for $i from 0 to length($extraSelectors) {
+		@each $selector in $extraSelectors {
 			&#{$extraSelectors} {
 				@content;
 			}
