fixed mobile issue with integers wrapping

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -128,8 +128,12 @@
 // Integer styles
 // ===============================
 .integerEquation {
-	margin-top: auto;
+	align-self: end;
 	justify-self: center;
+
+	&:not(.selected) {
+		text-wrap: nowrap;
+	}
 }
 
 .integer {
